WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163741
[CSS Parser] Fix font family parsing and add CSS region property parsing
https://bugs.webkit.org/show_bug.cgi?id=163741
Summary
[CSS Parser] Fix font family parsing and add CSS region property parsing
Dave Hyatt
Reported
2016-10-20 10:13:18 PDT
Fix font family parsing and add CSS region property parsing.
Attachments
Patch
(9.86 KB, patch)
2016-10-20 10:17 PDT
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-10-20 10:17:11 PDT
Created
attachment 292220
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-20 10:19:33 PDT
Attachment 292220
[details]
did not pass style-queue: ERROR: Source/WebCore/css/parser/CSSPropertyParser.cpp:4086: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/css/parser/CSSParser.cpp:1155: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3
2016-10-20 10:27:54 PDT
Landed in
r207622
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug